--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <title>Storybook+</title>
 <link href="sources/css/storybookplus.css" rel="stylesheet" type="text/css" media="all" />
 <link href="sources/fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
-<link href="sources/browserdetection/browser-detection.css" rel="stylesheet" type="text/css" />
+<link href="sources/browserdetection/browser-detection.min.css" rel="stylesheet" type="text/css" />
 <link href="sources/audioplayer/mediaelementplayer.css" rel="stylesheet" />
 <link href="sources/videoplayer/videojs.progressTips.min.css" rel="stylesheet" />
 <link href="sources/videoplayer/video-js.min.css" rel="stylesheet" />
 <script src="sources/scripts/jquery.min.js" type="text/javascript"></script>
 <script src="sources/scripts/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
 <script src="sources/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-<script src="sources/browserdetection/browser-detection.js"></script>
+<script src="sources/browserdetection/browser-detection.min.js"></script>
 <script src="sources/audioplayer/mediaelement-and-player.min.js"></script>
 <script src="sources/videoplayer/combined.video.js"></script>
 <script src="sources/videoplayer/videojs.progressTips.min.js"></script>
