--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <script src="sources/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
 <script src="sources/browserdetection/browser-detection.min.js"></script>
 <script src="sources/audioplayer/mediaelement-and-player.min.js"></script>
-<script src="sources/videoplayer/combined.video.js"></script>
+<script src="sources/videoplayer/combined.video.min.js"></script>
 <script src="sources/videoplayer/videojs.progressTips.min.js"></script>
-<script src="sources/scripts/storybookplus.js" type="text/javascript"></script>
+<script src="sources/scripts/storybookplus.min.js" type="text/javascript"></script>
 </head>
 <body>
 
