--- a/example/index.html
+++ b/example/index.html
@@ -47,7 +47,7 @@
                 <!-- slide and note container -->
                 <div id="slideNote">
                     <div id="currentSlide" class="sr-only" tabindex="1"></div>
-                    <div id="slide" tabindex="1" aria-live="polite"></div>
+                    <div id="slide" role="main" tabindex="1" aria-live="polite"></div>
                     <div id="ap" role="main" tabindex="1"></div>
                     <div id="vp" role="main" tabindex="1"></div>
                     <div id="note" role="complementary" aria-label="Notes"></div>
@@ -75,8 +75,8 @@
         <div id="download_bar"></div>
 
         <!-- screen reader hidden elements -->
-        <div id="endPresentation" class="sr-only" aria-live="polite" aria-relevant="additions" tabindex="-1"></div>
-        <div id="hasNote" class="sr-only" aria-live="polite" aria-relevant="additions" tabindex="-1"></div>
+        <div id="endPresentation" class="sr-only" aria-live="polite" tabindex="-1"></div>
+        <div id="hasNote" class="sr-only" aria-live="polite" tabindex="-1"></div>
 
     </div>
     <!-- end #storybook_plus_wrapper div -->
