prep for release

--- a/example/index.html
+++ b/example/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <!-- updated on 0x/xx/2016 -->
+    <!-- updated on 06/06/2016 -->
 
     <!-- display when javascript is disabled -->
     <noscript>
