root path is now set in the index file

--- a/example/index.html
+++ b/example/index.html
@@ -24,7 +24,7 @@
     </noscript>
 
     <!-- player wrapper -->
-    <div data-version="2.8.0" id="storybook_plus_wrapper">
+    <div data-version="2.8.0" id="storybook_plus_wrapper" data-root="">
 
         <!-- display when there is an error -->
         <div id="errorMsg"></div>
